refactor: entity 기본 생성자 protected 로 변경